--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,16 @@
 version: 2.1
+orbs:
+  node: circleci/node@5.0.3
 jobs:
-  build:
+  example-job:
     docker:
-      - image: alpine:3.15
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+      # replace with your preferred image
+      - image: cimg/base:stable
     steps:
-      - run:
-          name: App start 
-          command: node app.js
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+      - node/install-packages:
+          cache-only-lockfile: true 
+          pkg-manager: npm 
+workflows:
+  example-workflow:
+    jobs:
+      - example-job
